--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^1.1.3",
     "clear": "0.0.1",
     "figlet": "^1.2.0",
+    "lodash": "^4.16.4",
     "request": "^2.75.0",
     "vorpal": "^1.11.4"
   }
